--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>Stina Rosen</title>
   <link rel="stylesheet" type="text/css" title="stylesheet" href="style.css">
 </head>
+<header>Fotograf & Journalist Stina Rosén</header>
 <body>
-  <h1>Hej Stina</h1>
+  <h1></h1>
   <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
