--- a/LeWagon/index.html
+++ b/LeWagon/index.html
@@ -7,7 +7,25 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h1>Change your life, learn to code</h1>
+  <p>LeWagon brings technical skills to creative people</p>
+  <a href="https://www.lewagon.com">Apply now</a>
+  <h2>Discover our campuses</h2>
+
+  <img src="shanghai.jpg"  alt="Shanghai">
+  <h3>Shanghai</h3>
+  <p>Learn to code in Shanghai</p>
+
+  <img src="lisbon.jpg"  alt="Shanghai">
+  <h3>Lisbon</h3>
+  <p>Learn to code in London</p>
+
+  <img src="london.jpg"  alt="Londoni">
+  <h3>London</h3>
+  <p>Learn to code in London</p>
+
+
+<p>Made by me</p>
   <script src="main.js" type="js"></script>
 </body>
 </html>
