--- a/LeWagon/index.html
+++ b/LeWagon/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LeWagon</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700&family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Change your life, learn to code</h1>
@@ -20,7 +21,7 @@
   <h3>Lisbon</h3>
   <p>Learn to code in London</p>
 
-  <img src="london.jpg"  alt="Londoni">
+  <img src="london.jpg"  alt="London">
   <h3>London</h3>
   <p>Learn to code in London</p>
 
