--- a/LeWagon/index.html
+++ b/LeWagon/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LeWagon</title>
-  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700&family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LeWagon</title>
+    <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700&family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Change your life, learn to code</h1>
-  <p>LeWagon brings technical skills to creative people</p>
-  <a href="https://www.lewagon.com">Apply now</a>
-  <h2>Discover our campuses</h2>
-
-  <img src="shanghai.jpg"  alt="Shanghai">
-  <h3>Shanghai</h3>
-  <p>Learn to code in Shanghai</p>
-
-  <img src="lisbon.jpg"  alt="Shanghai">
-  <h3>Lisbon</h3>
-  <p>Learn to code in London</p>
-
-  <img src="london.jpg"  alt="London">
-  <h3>London</h3>
-  <p>Learn to code in London</p>
-
-
-<p>Made by me</p>
-  <script src="main.js" type="js"></script>
+  /*Banner section*/
+     <div class="banner">
+            <h1>Change your life, learn to code</h1>
+            <p>LeWagon brings technical skills to creative people</p>
+            <a href="https://www.lewagon.com">Apply now</a>
+      </div>
+  /*Card section*/
+    <div class="Campus section">
+      <h2>Discover our campuses</h2>
+        <div class="Campus card">
+          <img src="shanghai.jpg"  alt="Shanghai">
+            <h3>Shanghai</h3>
+            <p>Learn to code in Shanghai</p>
+        </div>
+        <div class="Campus card">
+            <img src="lisbon.jpg"  alt="Shanghai">
+            <h3>Lisbon</h3>
+            <p>Learn to code in London</p>
+        </div>
+        <div class="Campus card">
+            <img src="london.jpg"  alt="London">
+            <h3>London</h3>
+            <p>Learn to code in London</p>
+        </div>
+   </div>
+    /*Footer section*/
+       <div class="footer">
+         <p>Made by me</p>
+      </div>
+     <script src="main.js" type="js"></script>
 </body>
 </html>
