--- a/LeWagon/index.html
+++ b/LeWagon/index.html
@@ -9,32 +9,32 @@
 </head>
 
 <body>
-  /*Banner section*/
+  <!--Banner section -->
      <div class="banner">
             <h1>Change your life, learn to code</h1>
             <p>LeWagon brings technical skills to creative people</p>
-            <a href="https://www.lewagon.com">Apply now</a>
+            <a href="https://www.lewagon.com" class="button-blue">Apply now</a>
       </div>
-  /*Card section*/
-    <div class="Campus section">
+  <!--Campus section -->
+    <div class="container">
       <h2>Discover our campuses</h2>
-        <div class="Campus card">
+        <div class="card-white">
           <img src="shanghai.jpg"  alt="Shanghai">
             <h3>Shanghai</h3>
             <p>Learn to code in Shanghai</p>
         </div>
-        <div class="Campus card">
+        <div class="card-white">
             <img src="lisbon.jpg"  alt="Shanghai">
             <h3>Lisbon</h3>
             <p>Learn to code in London</p>
         </div>
-        <div class="Campus card">
+        <div class="card-white">
             <img src="london.jpg"  alt="London">
             <h3>London</h3>
             <p>Learn to code in London</p>
         </div>
    </div>
-    /*Footer section*/
+  <!--Footer section -->
        <div class="footer">
          <p>Made by me</p>
       </div>
