--- a/LeWagon/index.html
+++ b/LeWagon/index.html
@@ -19,17 +19,17 @@
     <div class="container">
       <h2>Discover our campuses</h2>
         <div class="card-white">
-          <img src="shanghai.jpg"  alt="Shanghai">
+          <img src="images/shanghai.jpg"  alt="Shanghai">
             <h3>Shanghai</h3>
             <p>Learn to code in Shanghai</p>
         </div>
         <div class="card-white">
-            <img src="lisbon.jpg"  alt="Shanghai">
+            <img src="images/paris.jpg"  alt="Shanghai">
             <h3>Lisbon</h3>
             <p>Learn to code in London</p>
         </div>
         <div class="card-white">
-            <img src="london.jpg"  alt="London">
+            <img src="images/london.jpg"  alt="London">
             <h3>London</h3>
             <p>Learn to code in London</p>
         </div>
